Major UI Enhancements & Auto-Moving Images
 Deployment Changes:
- Disabled auto-deployment on push to main branch
- Removed duplicate workflow file (simple-deploy.yml)
- Manual deployment control via GitHub Actions

 Visual Effects System:
- Added comprehensive GlowEffects component with 12 effect types
- Created GlowEffectsDemo page for showcasing effects
- Enhanced HeroSection with multiple glow effects
- Optimized performance by removing heavy aurora effects

 Auto-Moving Project Images:
- Enhanced ProjectCard with continuous auto-image rotation
- Added visual indicators (AUTO label, progress dots)
- Improved FeaturedProjectsCarousel with faster auto-play
- Added auto-play controls and progress indicators

 UI/UX Improvements:
- Replaced SVG logo with profile picture in navbar
- Fixed sticky footer positioning and text overlap issues
- Updated button styling to solid colors for better contrast
- Enhanced animation library with glow-specific variants

 Bug Fixes:
- Fixed TypeScript errors in ContactPage message functions
- Resolved HeroSection export issues
- Cleaned up unused imports and variables
- Improved JSX structure and component organization

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+  # push:
+  #   branches: [ main ]  # Commented out to disable auto-deploy
+  workflow_dispatch:  # Only manual deployment via GitHub Actions tab
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
